--- a/person-explorer/package.json
+++ b/person-explorer/package.json
@@ -13,6 +13,8 @@
   "author": "Dan Huynh",
   "license": "ISC",
   "dependencies": {
+    "@apollo/client": "^3.7.12",
+    "graphql": "^16.6.0",
     "next": "^13.3.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
